[package]
name = "pakken"
version = "0.1.0"
authors = ["Jonas Geschke <mail@yonny.de>"]
edition = "2018"
DESCRIPTION = "Concept of model driven development and scaffolding for everything."

[dependencies]
parser = { path = "./parser" }

[workspace]
members = [
    "ast",
    "cli",
    "parser",
    "generator",
    "util",
    "targets"
]