[package]
name = "generator"
version = "0.1.0"
authors = ["Jonas Geschke <mail@yonny.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.102"
ron = "0.5.1"

ast = { path = "../ast" }
util = { path = "../util" }
