[package]
name = "pakken"
version = "0.1.0"
authors = ["Jonas Geschke <mail@yonny.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
ast = { path = "../ast" }
util = { path = "../util" }
generator = { path = "../generator" }
targets = { path = "../targets" }
clap = { version = "^2.33.0", features = ["yaml", "wrap_help"] }
colored = "1.8.0"
once_cell = "1.2.0"

[build-dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
