[package]
name = "parser"
version = "0.1.0"
authors = ["Jonas Geschke <mail@yonny.de>"]
edition = "2018"
repository = "https://github.com/kegesch/pakken.git"
homepage = "https://github.com/kegesch/pakken"
description = "Parser for Pakken"
license = "MIT"

[dependencies]
ast = { path = "../ast" }
util = { path = "../util" }

pest = "^2.1.2"
pest_derive = "^2.1.0"
displaydoc = "0.1.4"
thiserror = "~1.0"